memmap-storage: split into (possible) implementations
This paves the way for a Zephyr implementation that will come. Some
small issues were fixed on the top persistence layer as well:

- Scalar entries now get a default-typed buffer to do each backend's
  read() onto. For fields declared as bit fields of larger regions, the
  former code would access invalid memory potentially.
- String entries get a '\0' presence check after reads, so that the node
  won't output malformed strings.
- We don't strdup() memmap entry names anymore--instead we point to the
  entries map entries' strings.
- We use sscanf() on the Linux i2c path parsing code.

Signed-off-by: Gustavo Lima Chaves <gustavo.lima.chaves@intel.com>

fixup

--- a/src/lib/io/Kconfig
+++ b/src/lib/io/Kconfig
@@ -64,28 +64,28 @@ endif
 
 menuconfig USE_STORAGE
     bool "Persistence Storage Support"
-    depends on LINUX
+    depends on FEATURE_FILESYSTEM || FEATURE_EFI || FEATURE_FLASH_MEM
     default y
 
 config USE_FILESYSTEM
     bool "File system persistence storage"
-    depends on USE_STORAGE
+    depends on USE_STORAGE && FEATURE_FILESYSTEM
     default y
 
 config USE_EFIVARS
     bool "EFI vars persistence storage"
-    depends on USE_STORAGE
+    depends on USE_STORAGE && FEATURE_EFI
     default y
 
 config USE_MEMMAP
     bool "Memory map persistence storage"
-    depends on USE_STORAGE
+    depends on USE_STORAGE && (FEATURE_FILESYSTEM || FEATURE_FLASH_MEM)
     default y
     help
-        Provide persistence storage based on memory maps.
-        Users must provide a mapping - for instance, using a JSON
-        file - that will be used to define where on memory
-        entries will be saved. Examples of memory are NVRAM or EEPROM.
+        Provide persistence storage based on memory maps. Users must
+        provide a mapping - for instance, using a JSON file - that
+        will be used to define where on memory entries will be saved.
+        Examples of memory are NVRAM or EEPROM or even a file.
 
 config USE_IPM
     bool "Inter-processor messaging"
