persistence: add zephyr implementation
This will work for the Arduino 101 only (as soon as Iván's board name
passing to the code is in I'll make it more explicit). We're kinda
abusing the W25QXXDV flash mem usage, doing erases in whole (minimum)
sectors just to write changed entries (we have even to malloc() for
that, horrible), but there's not better way to adhere to what the flow
expects to happen for the persistence node.

Signed-off-by: Gustavo Lima Chaves <gustavo.lima.chaves@intel.com>

--- a/src/lib/io/Kconfig
+++ b/src/lib/io/Kconfig
@@ -87,6 +87,14 @@ config USE_MEMMAP
         will be used to define where on memory entries will be saved.
         Examples of memory are NVRAM or EEPROM or even a file.
 
+config FLASH_MEM_REGION_OFFSET
+    hex "Flash memory region offset"
+    depends on FEATURE_FLASH_MEM
+    default 0x0
+    help
+        Offset, from the beginning of the addressable memory of the
+        flash memory, where to do memory mappings.
+
 config USE_IPM
     bool "Inter-processor messaging"
     depends on FEATURE_HW_IPM
