samples/bluetooth: Add a simple-pair sample
This sample tries pairing with the device (if provided) implementing
only the pairing_confirm() callback, which means that the capabilties
would be equivalent to a device which implements the "DisplayYesNo"
capability.

Signed-off-by: Vinicius Costa Gomes <vinicius.gomes@intel.com>

--- a/src/samples/bluetooth/Makefile
+++ b/src/samples/bluetooth/Makefile
@@ -1,7 +1,9 @@
-sample-$(BLUETOOTH_SAMPLES) += connect-paired heartbeat browse
+sample-$(BLUETOOTH_SAMPLES) += connect-paired heartbeat browse simple-pair
 
 sample-connect-paired-$(BLUETOOTH_SAMPLES) := connect-paired.c
 
 sample-heartbeat-$(BLUETOOTH_SAMPLES) := heartbeat.c
 
 sample-browse-$(BLUETOOTH_SAMPLES) := browse.c
+
+sample-simple-pair-$(BLUETOOTH_SAMPLES) := simple-pair.c
