--- a/src/modules/pin-mux/Makefile
+++ b/src/modules/pin-mux/Makefile
@@ -12,3 +12,11 @@ obj-$(PIN_MUX_INTEL_EDISON_REV_C) += intel-edison-rev-c.mod
 obj-intel-edison-rev-c-$(PIN_MUX_INTEL_EDISON_REV_C) := intel-edison-rev-c/intel-edison-rev-c.o intel-common/intel-common.o
 obj-intel-edison-rev-c-$(PIN_MUX_INTEL_EDISON_REV_C)-extra-cflags := -I$(top_srcdir)src/modules/pin-mux/intel-common
 obj-intel-edison-rev-c-$(PIN_MUX_INTEL_EDISON_REV_C)-type := pin-mux
+
+obj-$(PIN_MUX_CONTIKI_QMSI_QUARK_SE) += contiki-qmsi-quark-se.mod
+obj-contiki-qmsi-quark-se-y := contiki-qmsi/contiki-qmsi-common.o contiki-qmsi/contiki-qmsi-quark-se.o
+obj-contiki-qmsi-quark-se-y-type := pin-mux
+
+obj-$(PIN_MUX_CONTIKI_QMSI_QUARK_D2000) += contiki-qmsi-quark-d2000.mod
+obj-contiki-qmsi-quark-d2000-y := contiki-qmsi/contiki-qmsi-common.o contiki-qmsi/contiki-qmsi-quark-d2000.o
+obj-contiki-qmsi-quark-d2000-y-type := pin-mux
