OIC client and coap: Make contexts re-entrant to prevent double free
Fixes gh-2054
Closes gh-2093

Signed-off-by: Gabriel Schulhof <gabriel.schulhof@intel.com>

--- a/src/shared/Makefile
+++ b/src/shared/Makefile
@@ -39,6 +39,7 @@ obj-libshared-y-extra-cflags += -fvisibility=default
 obj-libshared-y-extra-ldflags += -lm
 
 headers-y += \
+    include/sol-reentrant.h \
     include/sol-util.h
 
 headers-$(FEATURE_FILESYSTEM) += \
