OIC client and coap: Make contexts re-entrant to prevent double free
Fixes gh-2054

Signed-off-by: Gabriel Schulhof <gabriel.schulhof@intel.com>

--- a/src/lib/common/Makefile
+++ b/src/lib/common/Makefile
@@ -118,6 +118,7 @@ headers-y := \
     include/sol-mainloop.h \
     include/sol-platform.h \
     include/sol-power-supply.h \
+    include/sol-reentrant.h \
     include/sol-types.h \
     sol-common-buildopts.h.in
 
