Add netctl fbp node type and samples for list services and connect/disconnect AP
Change-Id: Ibd280825004c42fc45d92c27a6b63fd15f81e560
Signed-off-by: guchaojie <chao.jie.gu@intel.com>

--- a/src/lib/comms/Makefile
+++ b/src/lib/comms/Makefile
@@ -8,6 +8,9 @@ obj-networking-$(NETWORK) := \
     sol-comms.o \
     sol-socket.o
 
+obj-$(NETCTL) += \
+    netctl.mod
+
 obj-networking-$(NETCTL) += \
     sol-netctl-impl-connman.o
 obj-networking-$(NETCTL)-extra-cflags += $(SYSTEMD_CFLAGS)
