--- a/Kconfig
+++ b/Kconfig
@@ -219,6 +219,7 @@ source "src/samples/flow/oic/Kconfig"
 source "src/samples/flow/oic/light-scan/Kconfig"
 source "src/samples/flow/oic-and-http-light/Kconfig"
 source "src/samples/flow/power-supply/Kconfig"
+source "src/samples/flow/netctl/Kconfig"
 source "src/samples/flow/trash-disposer/Kconfig"
 source "src/samples/flow/unix-socket/Kconfig"
 source "src/samples/flow/semaphore-monitor/Kconfig"
