--- a/src/lib/flow/Kconfig
+++ b/src/lib/flow/Kconfig
@@ -80,6 +80,7 @@ source "src/modules/flow/magnetometer/Kconfig"
 source "src/modules/flow/max31855/Kconfig"
 source "src/modules/flow/mqtt/Kconfig"
 source "src/modules/flow/network/Kconfig"
+source "src/modules/flow/netctl/Kconfig"
 source "src/modules/flow/oauth/Kconfig"
 source "src/modules/flow/oic/Kconfig"
 source "src/modules/flow/persistence/Kconfig"
