util-file: Add basename function that doesn't change param content
basename function from glibc may change the parameter content. For
example, basename of "/path/" will be "path" and basename of "" will be
".".

This commit adds a basename function that uses sol_str_slice in order
to prevent changing the parameter content. The only result value
that is different from basename from glibc is when path is an empty
string. The result will be an empty string too.

Signed-off-by: Otavio Pontes <otavio.pontes@intel.com>

--- a/src/test/Kconfig
+++ b/src/test/Kconfig
@@ -105,6 +105,11 @@ config TEST_UTIL
 	bool "util"
 	default y
 
+config TEST_UTIL_FILE
+       bool "util-file"
+       depends on FEATURE_FILESYSTEM
+       default y
+
 config TEST_COMPOSED_TYPE
 	bool "composed-type"
 	depends on USE_FLOW
