sol-netctl: Add sol-netctl build files
Add sol-netctl build files, so that sol-netctl API can be built.

Signed-off-by: Wu Zheng <wu.zheng@intel.com>

--- a/src/lib/comms/Kconfig
+++ b/src/lib/comms/Kconfig
@@ -43,6 +43,18 @@ config BLUETOOTH_NONE
 
 endchoice
 
+config NETCTL
+        bool "connection manager interfaces"
+        default y
+        depends on FEATURE_NETCTL && NETWORK
+        help
+           This provides the connection manager interfaces API.
+           The user can use the connection manager APIs to control
+           network and get the network info from connection manager.
+           It includes to get the network state, get the name of services
+           (wireless AP/Bluetooth Devices/...), get the ip address of
+           services, connect/disconnect services and so on.
+
 config COAP
 	bool "CoAP"
 	default y
