lwm2m: bootstrap interface - Sample Applications
This patch modifies the lwm2m-client application to be able to work as a Client
with or without Bootstrap Information (simulating the existence of a Factory
Bootstrap or the need of a Client- or Server-initiated Bootstrap prior).
to a regular Registration with a LWM2M Server).

Additionally to those changes in the client sample app, this patch introduces
a new sample application, lwm2m-bs-server, which works as a LWM2M Bootstrap Server
capable to deliver Bootstrap Information to certain LWM2M Clients.

These two apps should demonstrate the use of Soletta's LWM2M Boostrap Interface API,
both for Client- and Server-side.

Signed-off-by: Bruno Melo <bsilva.melo@gmail.com>

--- a/src/samples/coap/Makefile
+++ b/src/samples/coap/Makefile
@@ -7,6 +7,7 @@ sample-oic-client-$(OIC_SAMPLES) := oic-client.c
 sample-oic-server-$(OIC_SAMPLES) := oic-server.c
 sample-iotivity-test-client-$(OIC_SAMPLES) := iotivity-test-client.c
 
-sample-$(LWM2M_SAMPLES) += lwm2m-sample-server lwm2m-sample-client
+sample-$(LWM2M_SAMPLES) += lwm2m-sample-server lwm2m-sample-client lwm2m-sample-bs-server
 sample-lwm2m-sample-server-$(LWM2M_SAMPLES) := lwm2m-server.c
 sample-lwm2m-sample-client-$(LWM2M_SAMPLES) := lwm2m-client.c
+sample-lwm2m-sample-bs-server-$(LWM2M_SAMPLES) := lwm2m-bs-server.c
