netctl: Move the test to sample
The test-netctl was actually a sample and was  breaking the tests.

Signed-off-by: Flavio Ceolin <flavio.ceolin@intel.com>

--- a/src/samples/network/Kconfig
+++ b/src/samples/network/Kconfig
@@ -17,3 +17,7 @@ config ECHO_CLIENT_SAMPLE
 	bool "Echo client"
 	depends on NETWORK_SAMPLES && NETWORK
 	default y
+
+config NETCTL_SAMPLE
+	bool "Network control"
+	depends on NETWORK_SAMPLES && NETCTL
