--- a/src/samples/network/Makefile
+++ b/src/samples/network/Makefile
@@ -6,3 +6,8 @@ sample-echo-server-$(ECHO_SERVER_SAMPLE) := echo-server.c
 
 sample-$(ECHO_CLIENT_SAMPLE) += echo-client
 sample-echo-client-$(ECHO_CLIENT_SAMPLE) := echo-client.c
+
+sample-$(NETCTL) += netctl
+sample-netctl-$(NETCTL) := netctl.c
+sample-netctl-$(NETCTL)-deps := lib/comms/sol-netctl-impl-connman.o
+
