samples: add a couple for ThingsSpeak talkback
One to feed commands and other to execute commands in the queue.

Signed-off-by: Bruno Dilly <bruno.dilly@intel.com>

--- a/src/samples/flow/webservices/Makefile
+++ b/src/samples/flow/webservices/Makefile
@@ -3,3 +3,9 @@ sample-flower-power-http-$(FLOW_WEBSERVICES_FLOWER_POWER_SAMPLE) := flower-power
 
 sample-$(FLOW_WEBSERVICES_FREEGEO_IP_SAMPLE) += freegeoip
 sample-freegeoip-$(FLOW_WEBSERVICES_FREEGEO_IP_SAMPLE) := freegeoip.fbp
+
+sample-$(FLOW_WEBSERVICES_THINGSPEAK_IDENTIFY_SAMPLE) += thingspeak-identify
+sample-thingspeak-identify-$(FLOW_WEBSERVICES_THINGSPEAK_IDENTIFY_SAMPLE) := thingspeak-talkback-identify.fbp
+
+sample-$(FLOW_WEBSERVICES_THINGSPEAK_SMART_LOCK_SAMPLE) += thingspeak-smart-lock
+sample-thingspeak-smart-lock-$(FLOW_WEBSERVICES_THINGSPEAK_SMART_LOCK_SAMPLE) := thingspeak-talkback-smart-lock.fbp
