--- a/src/samples/flow/webservices/Kconfig
+++ b/src/samples/flow/webservices/Kconfig
@@ -7,3 +7,13 @@ config FLOW_WEBSERVICES_FREEGEO_IP_SAMPLE
 	bool
 	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_LOCATION && FLOW_NODE_TYPE_CONSTANT && FLOW_NODE_TYPE_CONSOLE
 	default y
+
+config FLOW_WEBSERVICES_THINGSPEAK_IDENTIFY_SAMPLE
+	bool
+	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_THINGSPEAK && FLOW_NODE_TYPE_CONVERTER && FLOW_NODE_TYPE_KEYBOARD && FLOW_NODE_TYPE_CONSOLE
+	default y
+
+config FLOW_WEBSERVICES_THINGSPEAK_SMART_LOCK_SAMPLE
+	bool
+	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_THINGSPEAK && FLOW_NODE_TYPE_CONVERTER && FLOW_NODE_TYPE_CONSTANT && FLOW_NODE_TYPE_CONSOLE && FLOW_NODE_TYPE_TIMER && FLOW_NODE_TYPE_STRING && FLOW_NODE_TYPE_BOOLEAN
+	default y
