--- a/src/samples/flow/misc/Kconfig
+++ b/src/samples/flow/misc/Kconfig
@@ -37,3 +37,8 @@ config FLOW_MISC_CHANGE_LOCALE_SAMPLE
 	bool
 	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_CONSTANT && FLOW_NODE_TYPE_STRING && FLOW_NODE_TYPE_APP && FLOW_NODE_TYPE_PLATFORM && FLOW_NODE_TYPE_CONSOLE
 	default y
+
+config FLOW_MISC_EVDEV_SAMPLE
+	bool
+	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_EVDEV && FLOW_NODE_TYPE_CONSOLE
+	default y
