--- a/src/samples/flow/misc/Kconfig
+++ b/src/samples/flow/misc/Kconfig
@@ -42,3 +42,8 @@ config FLOW_MISC_EVDEV_SAMPLE
 	bool
 	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_EVDEV && FLOW_NODE_TYPE_CONSOLE
 	default y
+
+config FLOW_MISC_NET_STATUS_SAMPLE
+	bool
+	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_NETWORK && FLOW_NODE_TYPE_CONSOLE && FLOW_NODE_TYPE_APP
+	default y
