samples: and one for efivars storage on MinnowBoard Max
Signed-off-by: Bruno Dilly <bruno.dilly@intel.com>

--- a/src/samples/flow/minnow-calamari/Kconfig
+++ b/src/samples/flow/minnow-calamari/Kconfig
@@ -32,3 +32,8 @@ config FLOW_CALAMARI_BUTTON_ACCUMULATOR_PERSISTENCE
 	bool
 	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_CALAMARI && FLOW_NODE_TYPE_PERSISTENCE && FLOW_NODE_TYPE_INT && FLOW_NODE_TYPE_BOOLEAN && FLOW_NODE_TYPE_GPIO
 	default y
+
+config FLOW_CALAMARI_BUTTON_ACCUMULATOR_PERSISTENCE_EFIVARS
+	bool
+	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_CALAMARI && FLOW_NODE_TYPE_PERSISTENCE && FLOW_NODE_TYPE_INT && FLOW_NODE_TYPE_BOOLEAN && FLOW_NODE_TYPE_GPIO
+	default y
