--- a/src/samples/flow/webservices/Kconfig
+++ b/src/samples/flow/webservices/Kconfig
@@ -17,3 +17,8 @@ config FLOW_WEBSERVICES_THINGSPEAK_SMART_LOCK_SAMPLE
 	bool
 	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_THINGSPEAK && FLOW_NODE_TYPE_CONVERTER && FLOW_NODE_TYPE_CONSTANT && FLOW_NODE_TYPE_CONSOLE && FLOW_NODE_TYPE_TIMER && FLOW_NODE_TYPE_STRING && FLOW_NODE_TYPE_BOOLEAN
 	default y
+
+config FLOW_WEBSERVICES_THINGSPEAK_CHANNEL_UPDATE_SAMPLE
+	bool
+	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_THINGSPEAK && FLOW_NODE_TYPE_CONSOLE && FLOW_NODE_TYPE_SWITCHER && FLOW_NODE_TYPE_CONVERTER && FLOW_NODE_TYPE_CONSTANT && FLOW_NODE_TYPE_INT && FLOW_NODE_TYPE_RANDOM && FLOW_NODE_TYPE_TIMER
+	default y
