--- a/src/samples/flow/basics/Kconfig
+++ b/src/samples/flow/basics/Kconfig
@@ -32,3 +32,13 @@ config FLOW_BASICS_SET_TARGET_SAMPLE
        bool
        depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_PLATFORM && FLOW_NODE_TYPE_CONSTANT && FLOW_NODE_TYPE_TIMER && FLOW_NODE_TYPE_CONVERTER && FLOW_NODE_TYPE_GPIO
        default y
+
+config FLOW_BASICS_WEEKDAY_SAMPLE
+	bool
+	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_WALLCLOCK && FLOW_NODE_TYPE_SWITCHER && FLOW_NODE_TYPE_CONSOLE && FLOW_NODE_TYPE_CONSTANT
+	default y
+
+config FLOW_BASICS_TIMEBLOCK_SAMPLE
+	bool
+	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_WALLCLOCK && FLOW_NODE_TYPE_CONSOLE
+	default y
