--- a/data/scripts/sol-flow-node-type-find.py.in
+++ b/data/scripts/sol-flow-node-type-find.py.in
@@ -1,6 +1,6 @@
 #!/usr/bin/env python3
 
-# This file is part of the Soletta™ Project
+# This file is part of the Soletta (TM) Project
 #
 # Copyright (C) 2015 Intel Corporation. All rights reserved.
 #
