samples: add udev sample
Signed-off-by: Bruno Dilly <bruno.dilly@intel.com>

--- a/src/samples/flow/misc/Kconfig
+++ b/src/samples/flow/misc/Kconfig
@@ -47,3 +47,9 @@ config FLOW_MISC_NET_STATUS_SAMPLE
 	bool
 	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_NETWORK && FLOW_NODE_TYPE_CONSOLE && FLOW_NODE_TYPE_APP
 	default y
+
+config FLOW_MISC_UDEV_SAMPLE
+	bool
+	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_UDEV && FLOW_NODE_TYPE_CONSOLE
+	default y
+
