modules: disable a few node types missing samples or tests
They won't be built by default until we write samples for them,
making it possible to easily test them before releases.

Signed-off-by: Bruno Dilly <bruno.dilly@intel.com>

--- a/src/modules/flow/robotics/Kconfig
+++ b/src/modules/flow/robotics/Kconfig
@@ -1,7 +1,7 @@
 config FLOW_NODE_TYPE_ROBOTICS
     tristate "Node type: robotics"
     depends on USE_PWM
-    default y
+    default n
     help
         Series of node types related to robotics.
 
