--- a/src/samples/flow/compass/Kconfig
+++ b/src/samples/flow/compass/Kconfig
@@ -2,3 +2,8 @@ config FLOW_COMPASS_LSM303_SAMPLE
 	bool
 	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_MAGNETOMETER && FLOW_NODE_TYPE_ACCELEROMETER && FLOW_NODE_TYPE_COMPASS && FLOW_NODE_TYPE_CONSOLE
 	default y
+
+config FLOW_COMPASS_ADXL45_SAMPLE
+	bool
+	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_ACCELEROMETER && FLOW_NODE_TYPE_TIMER && FLOW_NODE_TYPE_CONSOLE
+	default y
