--- a/src/samples/flow/compass/Makefile
+++ b/src/samples/flow/compass/Makefile
@@ -1,2 +1,5 @@
 sample-$(FLOW_COMPASS_LSM303_SAMPLE) += compass-lsm303
 sample-compass-lsm303-$(FLOW_COMPASS_LSM303_SAMPLE) := lsm303.fbp
+
+sample-$(FLOW_COMPASS_ADXL45_SAMPLE) += compass-adxl45
+sample-compass-adxl45-$(FLOW_COMPASS_ADXL45_SAMPLE) := compass-adxl45.fbp
