build: use FEATURE_MQTT and make sure it only build for Linux
Otherwise when trying to build samples for small oses
Soletta will fail to build.

Signed-off-by: Bruno Dilly <bruno.dilly@intel.com>

--- a/src/lib/comms/Kconfig
+++ b/src/lib/comms/Kconfig
@@ -203,7 +203,7 @@ config HTTP_SERVER_PORT
 config MQTT
 	bool "MQTT"
 	default y
-    depends on NETWORK && HAVE_MOSQUITTO
+    depends on NETWORK && FEATURE_MQTT
     help
             MQTT is a machine-to-machine (M2M)/"Internet of Things"
             connectivity protocol. It was designed as an extremely
