LWM2M: Split the module between different files
Since the LWM2M module has been increasing a lot latelly,
this patch splits the functionality of the module between
different, specific files, in order to make maintenance
easier.

Old file structure organization:
src/lib/comms/include/sol-lwm2m.h
src/lib/comms/sol-lwm2m.c

New file structure organization:
src/lib/comms/include/sol-lwm2m.h
src/lib/comms/include/sol-lwm2m-client.h
src/lib/comms/include/sol-lwm2m-server.h
src/lib/comms/include/sol-lwm2m-bs-server.h
src/lib/comms/sol-lwm2m-client.c
src/lib/comms/sol-lwm2m-server.c
src/lib/comms/sol-lwm2m-bs-server.c
src/lib/comms/sol-lwm2m-common.h
src/lib/comms/sol-lwm2m-common.c

Signed-off-by: Bruno Melo <bsilva.melo@gmail.com>

--- a/src/lib/comms/Makefile
+++ b/src/lib/comms/Makefile
@@ -140,7 +140,10 @@ obj-networking-$(MAVLINK)-extra-cflags += \
 	-Wno-declaration-after-statement
 
 obj-networking-$(LWM2M) += \
-	sol-lwm2m.o
+    sol-lwm2m-common.o \
+    sol-lwm2m-client.o \
+    sol-lwm2m-server.o \
+    sol-lwm2m-bs-server.o
 
 obj-bluetooth-$(BLUETOOTH) += \
 	sol-bluetooth.o
@@ -188,4 +191,7 @@ headers-$(MAVLINK) += \
 	include/sol-mavlink.h
 
 headers-$(LWM2M) += \
-    include/sol-lwm2m.h
+    include/sol-lwm2m.h \
+    include/sol-lwm2m-client.h \
+    include/sol-lwm2m-server.h \
+    include/sol-lwm2m-bs-server.h
