LWM2M: Add sol-lwm2m-security private API
This patch introduces the sol_lwm2m_security private API,
intended to be used by the sol-lwm2m infrastructure to
implement UDP Channel Security through DTLS Security Modes,
as described in Section 7.1 (Pg. 50) from the LWM2M spec.

For the time being, only Pre-Shared Key (PSK) mode is supported.

Signed-off-by: Bruno Melo <bsilva.melo@gmail.com>

--- a/src/lib/comms/Makefile
+++ b/src/lib/comms/Makefile
@@ -143,7 +143,8 @@ obj-networking-$(LWM2M) += \
     sol-lwm2m-common.o \
     sol-lwm2m-client.o \
     sol-lwm2m-server.o \
-    sol-lwm2m-bs-server.o
+    sol-lwm2m-bs-server.o \
+    sol-lwm2m-security.o
 
 obj-bluetooth-$(BLUETOOTH) += \
 	sol-bluetooth.o
