DTLS: Only enable TinyDTLS extra features if needed.
In order to use those feature, one needs a patched version of tinydtls.
Since most of times the this is not the case, make them optional.

--- a/src/lib/comms/Kconfig
+++ b/src/lib/comms/Kconfig
@@ -16,6 +16,13 @@ config DTLS
 
 	    If unsure, say N.
 
+config DTLS_EXTRAS
+	bool "Enable some DTLS extra features used by OIC"
+	default n
+	depends on DTLS
+	help
+            This is needed when one wants OIC to support crypto.
+
 config BLUETOOTH
        bool
 
