samples/flow: add tilt angle sensor
This example get 3-axis raw data inputs from iio Accelerometer and
convert into pitch angle and roll angle as outputs. It is also a
FBP & C hybrid programming model sensor sample. A makefile contains
both in-tree and out-of-tree build methods is provided as well.

Original-author: Abdul Halim, Muhammad Hadi Asyrafi
Signed-off-by: Kweh, Hock Leong <hock.leong.kweh@intel.com>

--- a/Kconfig
+++ b/Kconfig
@@ -231,6 +231,7 @@ source "src/samples/flow/trash-disposer/Kconfig"
 source "src/samples/flow/unix-socket/Kconfig"
 source "src/samples/flow/webservices/Kconfig"
 source "src/samples/flow/iio+network/Kconfig"
+source "src/samples/flow/tilt-angle/Kconfig"
 
 endmenu
 
