iio+network: iio magnetometer console and mqtt c code sample
IIO magnetometer c code sample will print sensor data in console
and also publish the sensor data through MQTT.

The sample include calibration and denoise algorithm adopt from
https://github.com/01org/android-iio-sensors-hal, and matrix-ops.c
and matrix-ops.h is straight adopt.

The calibration require to shake the sensor in figure 8 pattern.
It will print the calibrated level. UNRELIABLE=0, ACCURACY_LOW=1,
ACCURACY_MEDIUM=2, ACCURACY_HIGH = >=3.

Calibration and denoise is enabled by default. Can disable by
comment out MAGN_CALIBRATE and DENOISE_AVERAGE in the c source file.

The azimuth formula is provided by Han, He <he.han@intel.com>.

Signed-off-by: Lay, Kuan Loon <kuan.loon.lay@intel.com>

--- a/src/samples/iio+network/Makefile
+++ b/src/samples/iio+network/Makefile
@@ -1,2 +1,4 @@
-sample-$(IIO_MQTT_SAMPLES) += iio-gyroscope-console-and-mqtt-publish
+sample-$(IIO_MQTT_SAMPLES) += iio-gyroscope-console-and-mqtt-publish iio-magnetometer-console-and-mqtt-publish
 sample-iio-gyroscope-console-and-mqtt-publish-$(IIO_MQTT_SAMPLES) := iio-gyroscope-console-and-mqtt-publish.c
+sample-iio-magnetometer-console-and-mqtt-publish-$(IIO_MQTT_SAMPLES) := iio-magnetometer-console-and-mqtt-publish.c matrix-ops.c
+sample-iio-magnetometer-console-and-mqtt-publish-$(IIO_MQTT_SAMPLES)-extra-ldflags = -lm
