Fix tinycbor API calls
Since tinycbor 0.4, ptr and bytes_needed of CborEncoder structure are
accessible through a named union called data instead of an unnamed union.
So add the data structure to get access to ptr or use the new
cbor_encoder_get_extra_bytes_needed function to get access to bytes_needed

Signed-off-by: Fabrice Fontaine <fabrice.fontaine@orange.com>

--- a/src/lib/comms/Makefile
+++ b/src/lib/comms/Makefile
@@ -64,6 +64,7 @@ obj-tinycbor-y = \
     $(TINYCBOR_SRC_PATH)/cborencoder.o \
     $(TINYCBOR_SRC_PATH)/cborerrorstrings.o \
     $(TINYCBOR_SRC_PATH)/cborparser.o \
+    $(TINYCBOR_SRC_PATH)/cborparser_dup_string.o \
     $(TINYCBOR_SRC_PATH)/cborpretty.o
 
 obj-tinycbor-private-headers += \
