--- a/src/modules/flow/robotics/Makefile
+++ b/src/modules/flow/robotics/Makefile
@@ -1,3 +1,4 @@
 obj-$(FLOW_NODE_TYPE_ROBOTICS) += robotics.mod
 obj-robotics-$(FLOW_NODE_TYPE_ROBOTICS) := robotics.json robotics.o
 obj-robotics-$(FLOW_NODE_TYPE_ROBOTICS)-type := flow
+obj-robotics-$(FLOW_NODE_TYPE_ROBOTICS)-extra-ldflags = -lm
