--- a/src/samples/network/Kconfig
+++ b/src/samples/network/Kconfig
@@ -1,6 +1,6 @@
 config NETWORK_SAMPLES
 	bool "Network samples"
-        depends on NETWORK
+        depends on NETWORK && SAMPLES
 	default y
 
 config NETWORK_STATUS_SAMPLE
