--- a/src/samples/flow/c-api/Kconfig
+++ b/src/samples/flow/c-api/Kconfig
@@ -1,6 +1,6 @@
 config FLOW_C_API_CUSTOM_NODE_TYPES_SAMPLE
 	bool
-	depends on USE_FLOW
+	depends on FLOW_SAMPLES
 	default y
 
 config FLOW_C_API_HIGHLEVEL_SAMPLE
@@ -10,20 +10,20 @@ config FLOW_C_API_HIGHLEVEL_SAMPLE
 
 config FLOW_C_API_LOWLEVEL_SAMPLE
 	bool
-	depends on USE_FLOW && FLOW_NODE_TYPE_CONSOLE
+	depends on FLOW_SAMPLES && FLOW_NODE_TYPE_CONSOLE
 	default y
 
 config FLOW_C_API_SIMPLE_C_TYPE_SAMPLE
 	bool
-	depends on NODE_DESCRIPTION && FLOW_NODE_TYPE_CONSOLE && FLOW_NODE_TYPE_BOOLEAN && FLOW_NODE_TYPE_INT && FLOW_NODE_TYPE_TIMER
+	depends on SAMPLES && NODE_DESCRIPTION && FLOW_NODE_TYPE_CONSOLE && FLOW_NODE_TYPE_BOOLEAN && FLOW_NODE_TYPE_INT && FLOW_NODE_TYPE_TIMER
 	default y
 
 config FLOW_C_API_FIND_TYPE_SAMPLE
 	bool
-	depends on RESOLVER_CONFFILE
+	depends on SAMPLES && RESOLVER_CONFFILE
 	default y
 
 config FLOW_C_API_SINGLE_NODE_SAMPLE
 	bool
-	depends on NODE_DESCRIPTION && FLOW_NODE_TYPE_WALLCLOCK
+	depends on SAMPLES && NODE_DESCRIPTION && FLOW_NODE_TYPE_WALLCLOCK
 	default y
