--- a/src/samples/flow/tilt-angle/Kconfig
+++ b/src/samples/flow/tilt-angle/Kconfig
@@ -1,9 +1,9 @@
 config FLOW_TILT_ANGLE_ARCTANGENT_NODE
 	tristate "Node type: arctangent"
-	depends on USE_FLOW
+	depends on FLOW_SAMPLES
 	default m
 
 config FLOW_TILT_ANGLE_SAMPLE
 	bool
-	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_TILT_ANGLE_ARCTANGENT_NODE && FLOW_NODE_TYPE_IIO && FLOW_NODE_TYPE_CONSOLE && FLOW_NODE_TYPE_CONVERTER && FLOW_NODE_TYPE_FLOAT && FLOW_NODE_TYPE_CONSTANT && FLOW_NODE_TYPE_STRING
+	depends on FLOW_FBP_GENERATOR_SAMPLES && FLOW_NODE_TYPE_IIO && FLOW_NODE_TYPE_CONSOLE && FLOW_NODE_TYPE_CONVERTER && FLOW_NODE_TYPE_FLOAT && FLOW_NODE_TYPE_CONSTANT && FLOW_NODE_TYPE_STRING && FLOW_TILT_ANGLE_ARCTANGENT_NODE
 	default y
